# triangle_splatting

./: Cargo.toml  build_and_serve.sh  index.html  readme  readme.md
pkg/: package.json  webviewer.d.ts  webviewer.js  webviewer_bg.wasm.d.ts
src/: display.rs  gui.rs  lib.rs  load.rs  pbar.rs  scene.rs  utils.rs
src/shaders/: blit.wgsl  downsample.wgsl  splatting.wgsl
