[package]
name = "webviewer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.23.2"
console_error_panic_hook = "0.1.7"
crevice = { version = "0.18.0", features = ["std", "nalgebra"] }
egui = "0.32.1"
egui-wgpu = "0.32.1"
egui-winit = { version = "0.32.1", default-features = false }
futures = "0.3.31"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
half = { version = "2.6.0", features = ["bytemuck"] }
js-sys = "0.3.77"
log = "0.4.27"
mint = "0.5.9"
nalgebra = { version = "0.34.0", features = ["bytemuck", "mint"] }
rand = "0.9.2"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
wasm-streams = "0.4.2"
web-sys = { version = "0.3.77", features = [
    "DragEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "File",
    "Response",
    "HtmlCanvasElement",
] }
web-time = "1.1.0"
wgpu = { version = "25.0.2", features = ["webgl", "glsl"] }
winit = "0.30.12"
